# bizdev_analytics

./: CHANGELOG.md  Compile_Paper_by_Affiliation.ipynb  Convert_From_Excel.ipynb  Create_PDF.ipynb  Getting_started_SQLite3.ipynb  README.md  SQLdata_to_report.py  convert_to_df_and_csv.ipynb  excel_contactsdata_SQLUpload.py  excel_data_SQLUpload.py  mypy.ini  pylintrc  pyproject.toml
