[tool.poetry]
name = "pytket-myqos"
version = "0.0.0"
description = ""
authors = ["John Children <john.children@cambridgequantum.com>", "Vanya Eccles <vanya.eccles@quantinuum.com>"]
packages = [
  { include = "pytket" },
]

[tool.poetry.dependencies]
python = "^3.9.0, <3.11.0"
pytket = "1.*"
requests = "^2.25.1"
keyring = "^23.1.0"
myqos-dataclasses = {version = "1.1.7", source = "cqcpython"}
websockets = "^10.2"
nest-asyncio = "^1.5.5"
pytket-braket = {version = "*", optional = true}
pytket-quantinuum = {version = "*", optional = true}
pytket-qiskit = {version = "*", optional = true}
pytket-qulacs = {version = "*", optional = true}
pytket-projectq = {version = "*", optional = true}
matplotlib = {version = "^3.5.0", optional = true}
numpy = {version = "^1.21.4", optional = true}
pandas = {version = "^1.4.3", optional = true}
furo = "^2022.9.29"
pyjwt = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
mypy = "^0.961"
pylint = "^2.13.5"
pytest-cov = "^3.0.0"
dunamai = "^1.11.1"
requests-mock = "^1.8.0"
jupyter = {version = "^1.0.0", optional = true}
black = "^22.6"
hypothesis = "^6.47.3"
pytest-icdiff = "^0.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
nbsphinx = "^0.8.9"
sphinx-rtd-theme = "1.0.0"
ipython = "^8.5.0"
jupyter-sphinx = "0.4.0"

[tool.poetry.extras]
all = ["pytket-braket", "pytket-quantinuum", "pytket-qiskit", "pytket-qulacs", "pytket-projectq", "matplotlib", "numpy", "jupyter", "pandas"]
braket = ["pytket-braket"]
quantinuum = ["pytket-quantinuum"]
qiskit = ["pytket-qiskit"]
qulacs = ["pytket-qulacs"]
projectq = ["pytket-projectq"]
visualisation = ["matplotlib", "numpy", "jupyter"]
datascience = ["numpy", "pandas"]

[tool.poetry.group.cloudsmith]
optional=true

[tool.poetry.group.cloudsmith.dependencies]
cloudsmith-cli = "*"
cloudsmith-api = "*"

[[tool.poetry.source]]
name = "cqcpython"
url = "https://cqcpythonrepository.azurewebsites.net/simple/"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
